# business-card

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  hci_ipc.conf  prj.conf  sysbuild.cmake
boards/: mbc10_nrf5340_cpuapp.conf  mbc10_nrf5340_cpuapp.overlay  mbc10_nrf5340dk_cpuapp.conf  mbc10_nrf5340dk_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
boards/mb/mbc10/: Kconfig.defconfig  Kconfig.mbc10  board.cmake  board.yml  mbc10_nrf5340_cpuapp.dts  mbc10_nrf5340_cpuapp.yaml  mbc10_nrf5340_cpuapp_defconfig  mbc10_nrf5340_cpuapp_ns.dts  mbc10_nrf5340_cpuapp_ns.yaml  mbc10_nrf5340_cpunet.dts  mbc10_nrf5340_cpunet.yaml
data/: CreateShortcut.vbs  GitHub.url  LinkedIn.url  README.txt
hardware/: BusinessCard.PCBDwf  BusinessCard.PrjPcb  BusinessCard.PrjPcbStructure  BusinessCard.SchDoc
hardware/Jobs/: push-to-aisler-odb.Outjob
hardware/Libraries/: 3028.IntLib  CPT-9019A-SMT-TR.IntLib  desktop.ini  keystone-PN3028.STEP  pca10059.IntLib
hardware/v1.1/: Bill of Materials.xlsx
src/: ble.c  ble.h  led.c  led.h  main.c  sample_usbd_init.c  sense.c  sense.h  usbms.c  usbms.h
